update icon support

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 </div>
             </div>
             
-            <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
-            <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
-            <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
+            <button class="btn-new"><ion-icon name="add-outline"></ion-icon>New game</button>
+            <button class="btn-roll"><ion-icon name="cube-outline"></ion-icon>Roll dice</button>
+            <button class="btn-hold"><ion-icon name="checkbox-outline"></ion-icon>Hold</button>
             <a href="#openModal" class="open-btn"><ion-icon name="help-circle"></ion-icon></a>
             <div id="openModal" class="modalWindow">
                 <div>
